# technical_excellence_ws

./: .gitignore  README.md
excercise-descriptions/: 4-tidy-first.md  birthday-greetings.md
java/1-string-calculator/: pom.xml
java/2-tire-pressure/: pom.xml
java/3-birthday-greetings/: pom.xml
java/4-tidy-first/: README.md  pom.xml
java/5-gilded-rose/: pom.xml
java/6-gilded-rose-tested/: .gitignore  pom.xml
java/7-seminar-shop/: pom.xml
java/birthday-greetings/: pom.xml
java/string-calculator/: pom.xml
java/tire-pressure/: pom.xml
presentation/: index.html  package-lock.json  package.json  slides.md  slides2.md  style.css
python/1-string-calculator/: README.md  pyproject.toml
python/4-tidy-first/: README.md  pyproject.toml
python/5-gilded-rose/: .gitignore  pyproject.toml
python/6-gilded-rose-tested/: pyproject.toml
python/7-seminar-shop/: pyproject.toml
tdd-starter-java/: README.md  pom.xml
tdd-starter-python/: .gitignore  pyproject.toml
tdd-starter-python/tests/: test_calculator.py
tdd-starter-typescript/: package-lock.json  package.json
tdd-starter-typescript/src/: calculator.test.ts
test-refactoring_slides/: package-lock.json  package.json  slides.md
tidy-first_slides/: package-lock.json  package.json  slides-ket.md
tidy-first_slides/theme/: layoutHelper.ts  package-lock.json
typescript/4-tidy-first/: README.md  package-lock.json  package.json
typescript/5-gilded-rose/: package-lock.json  package.json
typescript/6-gilded-rose-tested/: README.md  package-lock.json  package.json  tsconfig.json
(+52 files in other folders)
